Sat Nov  3 22:28:51 2001  Keiju Ishitsuka <keiju@ishitsuka.com>
	* matrix.rb (Matrix#column_vectors, Matrix#row_vectors): ditto bug. 
	  this bug report and fix by tsutomu@nucba.ac.jp.
	
	* forwardable.rb: change raise to Kernel::raise
	
Thu Nov  1 14:08:42 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* bignum.c (rb_big_aref): idx may be a Bignum.

	* numeric.c (fix_aref): negative index must return zero.

Wed Oct 31 16:59:25 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (exec_under): should initialize ruby_frame->self;

Wed Oct 31 15:09:28 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (POP_VARS): should not set DVAR_DONT_RECYCLE if _old
	  ruby_vars is already force_recycled.

Wed Oct 31 02:44:06 2001  Wakou Aoyama  <wakou@fsinet.or.jp>

	* lib/cgi.rb: CGI::Cookie::parse(): Ignore duplicate keys caused by
	  Netscape bug.

Tue Oct 30 14:04:04 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_f_eval): can't modify untainted binding.

Mon Oct 29 16:08:30 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* regex.c (re_compile_pattern): should preverve p0 value.

Mon Oct 29 07:57:31 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (str_extend): shuould allow interpolation of $-x.

Sat Oct 27 23:01:19 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* bignum.c (rb_big_eq): convert Bignum to Float, instead of
	  reverse.

Fri Oct 26 06:19:29 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* time.c (time_localtime): getting tm should not be prohibited for
	  frozen time objects.

	* time.c (time_gmtime): ditto.

	* version.c (Init_version): freeze RUBY_VERSION,
	  RUBY_RELEASE_DATE, and RUBY_PLATFORM.

	* file.c (Init_File): freeze File::SEPARATOR, ALT_SEPARATOR and
	  PATH_SEPARATOR.

	* file.c (rb_stat_cmp): should check operand type before calling
	  get_stat().

Thu Oct 25 10:28:15 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_eval_cmd): should not invoke "call" with a block on
	  any occasion.
