@@ -1,8 +1,17 @@
+Tue Nov  6 14:38:48 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>
+
+	* dir.c (my_getcwd): do not rely on MAXPATHLEN.
+
+Mon Nov  5 17:09:55 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>
+
+	* eval.c (rb_yield_0): should not call rb_f_block_given_p().
+
 Sat Nov  3 22:28:51 2001  Keiju Ishitsuka <keiju@ishitsuka.com>
+
+	* forwardable.rb: change raise to Kernel::raise
+	
 	* matrix.rb (Matrix#column_vectors, Matrix#row_vectors): ditto bug. 
 	  this bug report and fix by tsutomu@nucba.ac.jp.
-	
-	* forwardable.rb: change raise to Kernel::raise
 	
 Thu Nov  1 14:08:42 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>
 
